# BioCapture

./: build.gradle  settings.gradle  settings.gradle.kts
MorphoLiveScan/: build.gradle
MorphoLiveScan/libs/include/: tpapi.h
MorphoLiveScan/src/main/: AndroidManifest.xml
MorphoLiveScan/src/main/cpp/: CMakeLists.txt  mls-jni.cpp  mls-jni.h
MorphoLiveScan/src/main/java/com/example/morpholivescan/: CallbackMessage.java  MTOPSResults.java  MTOPSResultsBox.java  MorphoLiveScan.java  devInfo.java  eCapControl.java  eCaptureMode.java  eCaptureState.java  eCaptureType.java  eMlsError.java  imgSize.java  tpDevList.java
MorphoSmart_SDK_6.42.0.0/: build.gradle
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/biocapture/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/biocapture/: PeripheralsPowerInterface.aidl  PortInterface.aidl
app/src/main/aidl/com/example/ledservice/: PortInterface.aidl
app/src/main/aidl/com/example/peripherals/: PeripheralsPowerInterface.aidl
app/src/main/aidl/com/idemia/ledservice/: PortInterface.aidl
app/src/main/java/api/: ApiService.java
app/src/main/java/com/example/biocapture/: AuditLogs.java  BaseActivity.java  Biousers.java  CbmProcessObserver.java  Constants.java  CustomMorphoUser.java  DatabaseManager.java  DefaultActivity.java  FetchStudentData.java  FingerprintSensor.java  FingerprintTemplate.java  FpSensorActivity.java  FpSensorActivityV.java  FpTopSlimSensorActivity.java  MainActivity.java  MorphoSmartFingerprintCapture.java  Refactor.java  RefactorActivity.java  RegisterActivity.java  RegisterStudentRequest.java  RegisterViewModel.java  RetrofitClient.java  SplashActivity.java  StudentDetails.java  UsbManagementActivity.java  Utility.java  VerifyActivity.java
app/src/main/java/com/example/biocapture/Administer/: AdminActivity.java  AdminLoginRequest.java  Biousers.java  LoginActivity.java  PermissionsResponse.java  UserLoginRequest.java
app/src/main/java/com/example/biocapture/Analytics/: AnalyticsActivity.java
app/src/main/java/com/example/biocapture/adapters/: HomeScreenItemsAdapter.java
app/src/main/java/com/example/biocapture/login/: LoginActivity.java
app/src/main/res/drawable/: action_button_background.xml  baseline_account_circle.xml  baseline_admin.xml  baseline_analytics.xml  baseline_app_registration_24.xml  baseline_logout.xml  baseline_menu_24.xml  baseline_restore_24.xml  baseline_verified_user_24.xml  border.xml  button_background.xml  button_numeric.xml  button_round_corner.xml  button_round_grey.xml  button_text_color.xml  capture_background.xml  input_bg.xml  input_login.xml  rectangle.xml  rounded_corners.xml
app/src/main/res/font/: id_screen_fonts.xml
app/src/main/res/layout/: activity_admin.xml  activity_analytics.xml  activity_default.xml  activity_fp_sensor.xml  activity_fp_topslim_sensor.xml  activity_login.xml  activity_main.xml  activity_refactor.xml  activity_register.xml  activity_splash.xml  activity_usb_management.xml  activity_verify.xml  colored_spinner_layout.xml  dialog_admin.xml  dialog_login.xml  spinner_dropdown_item.xml  spinner_dropdown_layout.xml
app/src/main/res/menu/: action_menu.xml  menu.xml  menu_item.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/biocapture/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
